--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -20,5 +20,8 @@ jobs:
       - name: Set up Zig
         uses: mlugg/setup-zig@v1
 
+      - name: Check formatting
+        run: zig fmt --ast-check --check .
+
       - name: Run `build`
-        run: zig build
+        run: zig build --summary all
